--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </header>-->
     <section class="container">
         <div class="rocks"></div>
+        <div class="rocks2"></div>
         <div class="list">
             <div class="item active">
                 <div class="car-img">
